--- a/Project-PromoJ-Modulo-2-Team-5-master/src/html/index.html
+++ b/Project-PromoJ-Modulo-2-Team-5-master/src/html/index.html
@@ -10,7 +10,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <script src="https://kit.fontawesome.com/c75582e3c5.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/c75582e3c5.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
@@ -38,7 +41,11 @@
             <p class="capitalize">comparte</p>
           </article>
         </div>
-        <a href="./app.html" title="Comenzar" class="page__main--link uppercase">
+        <a
+          href="./app.html"
+          title="Comenzar"
+          class="page__main--link uppercase"
+        >
           comenzar
         </a>
       </div>
